--- a/craft_sicherungWebsite/templates/fuerSie/index.html
+++ b/craft_sicherungWebsite/templates/fuerSie/index.html
@@ -32,7 +32,7 @@
       <h1 style="padding-bottom: .5rem;"> {{ entry.text }}  </h1>
 
         <div class="embed-responsive embed-responsive-16by9">
-          <iframe src="https://www.youtube.com/embed/oFzu5ElARTo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe src="https://www.youtube.com/embed/oFzu5ElARTo?rel=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
 
       <div id="anleser" style="padding-top: 2rem;"> {{ entry.zusatzfeld1 }}</div>
