--- a/craft_sicherungWebsite/templates/projekte/wowirarbeiten.html
+++ b/craft_sicherungWebsite/templates/projekte/wowirarbeiten.html
@@ -10,8 +10,8 @@
 
 <nav id="myScrollspy">
   <ul class="nav nav-pills flex-column">
-       <li class="nav-item">   <a class="nav-link active" href="#peru"> </a> <span>Peru</span> </li>
-       <li class="nav-item">   <a class="nav-link" href="#kenia"></a> <span> Kenia </span>  </li>
+       <li class="nav-item">   <a class="nav-link active" href="#peru">  <div>Peru</div> </a> </li>
+       <li class="nav-item">   <a class="nav-link" href="#kenia"> <div> Kenia </div> </a> </li>
   </ul>
 </nav>
 
@@ -30,7 +30,7 @@
 
 <div class="container achterspaltenlayout" style="padding-top: 0px; padding-bottom: 0; position: relative;"> <!-- position: relative; das sich der container nicht von der Welle beeinflussen lässt -->
   <div style="padding-bottom:3rem; ">
-    <h1 style="padding-bottom: 30px;"> Chance e.V. ist in Peru und Kenia aktiv   </h1>
+    <h1 style="padding-bottom: 2rem;"> Chance e.V. ist in Peru und Kenia aktiv   </h1>
     <p id="anleser" style="padding-bottom: 0;"> In den Regenwäldern Amazoniens und den Savannen am Rande der Maasai Mara.  </p>
     </div>
   </div>
