--- a/craft_sicherungWebsite/templates/ueberUns/konzept.html
+++ b/craft_sicherungWebsite/templates/ueberUns/konzept.html
@@ -64,7 +64,7 @@
   </div>
 </div>
 
-  <img class="img-fluid mx-auto d-block" src=" {{ craft.assets.filename('chance-ueber-uns-konzept-familie.jpg').one().getUrl() }} ">
+  <img class="img-fluid fullscreenbild" src=" {{ craft.assets.filename('chance-ueber-uns-konzept-familie.jpg').one().getUrl() }} ">
 
 <div class="container zwoelferspaltenlayout" style="padding-top: 0px;">
 <p id="anleser" class="text-center"> Erfahren Sie mehr über uns </p>
