--- a/craft_sicherungWebsite/templates/ueberUns/leitbild.html
+++ b/craft_sicherungWebsite/templates/ueberUns/leitbild.html
@@ -68,7 +68,7 @@
   <img class="img-fluid" src="{% if entry.bild.one() is not null %}  {{ entry.bild.one().getUrl() }}  {% endif %}" style="padding-bottom: 2rem;">
 </div>
 
-  <img class="img-fluid mx-auto d-block" style="padding-bottom: 0;" src=" {{ craft.assets.filename('chance-ueber-uns-leitbild-kind.jpg').one().getUrl() }} ">
+  <img class="img-fluid fullscreenbild" style="padding-bottom: 0;" src=" {{ craft.assets.filename('chance-ueber-uns-leitbild-kind.jpg').one().getUrl() }} ">
 
 <div class="container-fluid no-padding" style="background-color: white; padding-bottom: 5rem; padding-top: 4rem;">
   <div class="container zwoelferspaltenlayout" style="padding-top: 0;">
