--- a/craft_sicherungWebsite/templates/_layouts/weiterleitungmitzeilenumbruch.html
+++ b/craft_sicherungWebsite/templates/_layouts/weiterleitungmitzeilenumbruch.html
@@ -1,12 +1,12 @@
 
-<div class="zwoelferspaltenlayout container text-left" style="background-color: white; padding-top: 0px; margin-bottom: 2.5rem;">
+<div class="zwoelferspaltenlayout container text-left" style="background-color: white; padding-top: 0px;">
 <div class="row">
   <div class="col-md-4" style="padding: 0;">
     <a href="{{ entry.reinertext }}">
-    <img class="img-fluid w-100" style="padding-bottom: 0px;" src="{% if entry.bild.one() is not null %} {{ entry.bild.one().getUrl() }}  {% endif %}">
+      <img class="img-fluid w-100 h-100" style="padding-bottom: 0px; object-fit: cover;" src="{% if entry.bild.one() is not null %} {{ entry.bild.one().getUrl() }}  {% endif %}">
   </a>
   </div>
-  <div class="col-md-8" style="padding-top: 2rem; padding-left: 30px;">
+  <div class="col-md-8" style="padding: 3rem; background-color: #f8f5f2;">
     <h3> {{ entry.anleser }} </h3>
     <div id="copy"> {{ entry.text }}</div>
   </div>
