--- a/craft_sicherungWebsite/templates/projekte/_entry/empfehlungeinzeln.html
+++ b/craft_sicherungWebsite/templates/projekte/_entry/empfehlungeinzeln.html
@@ -56,13 +56,14 @@
         {% if entry.slug != aktuellerEintrag %}
       <div class="card" style="border: 0;">
             <div class="row">
+              {% if entry.bild.one() is not null %}
               <div class="col-4" style="text-align: center; white-space: nowrap;">
                  <span class="helper" style="display: inline-block; height: 100%; vertical-align: middle;"></span> <!-- Helperspan für vertical alignment in der Mitte -->
                  <a href="{{ 'https://aufbau-website.de/craft/web/ueber-uns/empfehlung/' ~ entry.slug }}">
                   <img class="rounded-circle w-75" style="margin-left: 12.5%; vertical-align: middle; max-height: 100px;" src=" {% if entry.bild.one() is not null %} {{ entry.bild.one().url }} {% endif %}">
                 </a>
                 </div>
-                <div class="col-8">
+                <div class="col-8"> {% else %} <div class="col-4">  </div> <div class="col-8"> {% endif %}
                   <div class="card-body" style="padding: 0; padding-right: 1rem;">
                     <p class="card-text">
                       <h4 style="margin: 0;"> {{ entry.title }} </h4>
