--- a/craft_sicherungWebsite/templates/projekte/_entry/erfahrungsberichtlang.html
+++ b/craft_sicherungWebsite/templates/projekte/_entry/erfahrungsberichtlang.html
@@ -35,7 +35,7 @@
 {% if entry.slug == 'medalid-lang-1' %}
 <div class="container achterspaltenlayout" style="padding-bottom: 4rem;">
   <div class="embed-responsive embed-responsive-16by9">
-<iframe src="https://www.youtube.com/embed/ucReBc4Os7k" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe src="https://www.youtube.com/embed/ucReBc4Os7k?rel=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
 </div>
 {% endif %}
