--- a/craft_sicherungWebsite/templates/projekte/programme/naturschutz.html
+++ b/craft_sicherungWebsite/templates/projekte/programme/naturschutz.html
@@ -47,7 +47,7 @@
       <li class="nav-item">   <a class="nav-link" href="#gelingendesLeben"> <div>Gelingendes Leben </div>  </a>  </li>
     </ul>
   </nav>
-  
+
 </div>
 
 <div class="container zwoelferspaltenlayout" style="padding-top: 4rem;">
@@ -64,7 +64,7 @@
   </div>
 </div>
 
-<img class="img-fluid mx-auto d-block" style="padding-bottom: 0;" src=" {{ craft.assets.filename('chance-projekte-programme-naturschutz.jpg').one().getUrl() }}">
+<img class="img-fluid fullscreenbild" style="padding-bottom: 0;" src=" {{ craft.assets.filename('chance-projekte-programme-naturschutz.jpg').one().getUrl() }}">
 
 <div class="container achterspaltenlayout" id="video"></div>
 
@@ -105,7 +105,7 @@
 
 {% set entry = craft.entries.section('projekte').slug('waldpate-werden').one() %}
 
-<div class="container-fluid"  style="padding-top: 2.5rem; padding-bottom: 2.5rem; background-image: url({{ entry.bild.one().url }});">
+<div class="container-fluid"  style="padding-top: 2.5rem; padding-bottom: 2.5rem; background-image: url({{ entry.bild.one().url }}); background-size: cover;">
   <div class="row" id="spende">
     <div class="col-md-1">  </div>
     <div class="col-md-3">   <img  style="position: relative; top: 50%; transform: translateY(-50%);" class="img-fluid mx-auto d-block" src="{% if entry.bild.inReverse().one() is not null %}  {{ entry.bild.inReverse().one().getUrl() }}  {% endif %}"> </div>
@@ -133,7 +133,7 @@
 
 </div>
 
-<img class="img-fluid" src=" {{ craft.assets.filename('chance-projekte-programme-naturschutz_maedchen.jpg').one().getUrl() }}">
+<img class="img-fluid fullscreenbild" src=" {{ craft.assets.filename('chance-projekte-programme-naturschutz_maedchen.jpg').one().getUrl() }}">
 
 {% include '_layouts/codeschnipsel/karussellmitjs' %}
 
