--- a/craft_sicherungWebsite/templates/spenden/einkaufenundspenden.html
+++ b/craft_sicherungWebsite/templates/spenden/einkaufenundspenden.html
@@ -23,7 +23,7 @@ h2 {
     </ol>
   </nav>
 
-  <img class="img-fluid" id="welle" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" style="position: absolute; left:0; width: 40%;">
+  <img class="img-fluid" id="welle" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" style="position: absolute; left:0; width: 40%; z-index: -1;">
   <div class="container achterspaltenlayout text-center" style="padding-top: 0px; position: relative;">    {% set entry = craft.entries.section('spenden').slug('partnerland').one() %}
     <div>
       <h1 style="padding-bottom: 3rem;"> Geben Sie Menschen eine Chance!  </h1>
@@ -31,7 +31,7 @@ h2 {
   </div>
 </div>
 
-<div class="container-fluid no-padding" style="padding: 5rem 2rem; background-image: url({{ entry.bild.one().url }}); background-repeat: no-repeat;">
+<div class="container-fluid no-padding" style="padding: 5rem 2rem; background-image: url({{ entry.bild.one().url }}); background-repeat: no-repeat; background-size: cover;">
   <div class="container zwoelferspaltenlayout" style="background-color: white; padding: 4rem 2rem;">
 
     {% set entry = craft.entries.section('spenden').slug('einkaufen-und-spenden').one() %}
