--- a/craft_sicherungWebsite/templates/spenden/schenkenundspenden.html
+++ b/craft_sicherungWebsite/templates/spenden/schenkenundspenden.html
@@ -23,7 +23,7 @@
     </ol>
   </nav>
 
-  <img class="img-fluid" id="welle" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" style="position: absolute; left:0; width: 40%;">
+  <img class="img-fluid" id="welle" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" style="position: absolute; left:0; width: 40%; z-index: -1;">
 
   <div class="container achterspaltenlayout text-center" style="padding-top: 0px; position: relative;">
   {% set entry = craft.entries.section('spenden').slug('partnerland').one() %}
@@ -33,7 +33,7 @@
   </div>
 </div>
 
-<div class="container-fluid no-padding" style="padding: 5rem 2rem; background-image: url({{ entry.bild.one().url }}); background-repeat: no-repeat;">
+<div class="container-fluid no-padding" style="padding: 5rem 2rem; background-image: url({{ entry.bild.one().url }}); background-repeat: no-repeat; background-size: cover;">
   <div class="container zwoelferspaltenlayout" style="background-color: white; padding: 4rem 3rem;">
 
     {% set entry = craft.entries.section('spenden').slug('spenden-und-schenken').one() %}
