--- a/craft_sicherungWebsite/templates/ueberUns/motivation.html
+++ b/craft_sicherungWebsite/templates/ueberUns/motivation.html
@@ -53,7 +53,7 @@
 
 {% set entry = craft.entries.section('ueberUns').slug('motivation').one() %}
 
-  <img class="img-fluid mx-auto d-block" style="padding-bottom: 0;" src="{% if entry.bild2.one() is not null %} {{ entry.bild2.one().url }} {% endif %}">
+  <img class="img-fluid fullscreenbild" style="padding-bottom: 0;" src="{% if entry.bild2.one() is not null %} {{ entry.bild2.one().url }} {% endif %}">
 
 <div class="container-fluid no-padding" style="background-color: white; padding-bottom: 5rem;">
 
